welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
var cpt=0
override def run() {
  var x:Int=0
  var y:Int=0
  setPos(x,y)
  do{
    setPos(x+1,y)
    cpt+=1
    ecritMessage()
  } while(!setPos(x,y)=setPos(7,0))
}
